2010-07-07   D. V. Wiebe <getdata@ketiltrout.net>   svn:431
	* test/get_linterp_notab.c: Test for dummy linterp creation.

	* src/common.c (_GD_MakeDummyLinterp): Deleted.
	* src/common.c (_GD_ReadLinterpFile): Don't make a dummy LUT on error.

2010-07-07   D. V. Wiebe <getdata@ketiltrout.net>   svn:430
	* test/bof_lincom.c: Fix.

	* test/get_linterp_sort.c test/put_linterp_reverse.c
	test/put_linterp_nomono.c: Added.

	* src/getdata.c (_GD_DoLinterp): Update call to _GD_LinterpData.
	* src/putdata.c (_GD_DoLinterpOut): Reject non-monotonic LUTs.  Update for
	new LUT struct.
	* src/common.c (_GD_LinterpData): Handle both complex and real tables.
	* src/common.c (_GD_CLinterpData): Deleted.
	* src/common.c (_GD_ReadLinterpFile): Sort the LUT.
	* src/internal.h: GD_E_DOMAIN_ANTITONIC added.  Define new LUT struct.

	* src/common.c (_GD_ReadLinterpFile): Don't read the file twice, instead
	dynamically resize the LUT buffer.
	* src/common.c (_GD_GetLine): Abort early on EOF.

	* src/flimits.c (_GD_GetEOF): Fix INDEX check in PHASE.

2010-07-07   D. V. Wiebe <getdata@ketiltrout.net>   svn:428
	* bindings/cxx/test/addentry.cpp bindings/cxx/test/getdata.cpp
	bindings/cxx/test/nframes.cpp bindings/cxx/test/spf.cpp
	bindings/cxx/test/putdata.cpp: Deleted; coverage duplicated by big_test.

2010-07-06   D. V. Wiebe <getdata@ketiltrout.net>   svn:427
	* test/eof_phase.c test/eof.c test/eof_lincom.c test/eof_index.c: Renamed
	from nsamples*.c
	* test/bof.c test/bof_lincom.c test/bof_phase.c: Added.

	* bindings/python/test/big_test.py bindings/cxx/test/big_test.cpp
	bindings/f77/test/big_test.f bindings/f77/test/big_test95.f90
	bindings/idl/test/big_test.pro: Add a new test 86 and also add test 142.

	* bindings/cxx/dirfile.cpp (Dirfile::EOF Dirfile::BOF): Added.
	* bindings/python/pydirfile.c (gdpy_dirfile_getbof gdpy_dirfile_geteof):
	Added.
	* bindings/f77/fgetdata.c (GDGBOF GDGEOF): Added.
	* bindings/f77/getdata.f90.in (fgd_get_bof fgd_get_eof): Added.